# SolisArt-HA-integration

./: .gitignore  README.md  hacs.json  pyproject.toml
custom_components/solisart/: __init__.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  sensor.py  strings.json
custom_components/solisart/api/: client.py  decoder.py  dict_parser.py  endpoint.py  model.py  snapshot.py  xml_parser.py
custom_components/solisart/translations/: en.json  fr.json
docs/: REVERSE_ENGINEERING.md
docs/specs/: 2026-06-22-solisart-ha-integration-design.md
tests/: conftest.py  test_decoder.py  test_dict_parser.py  test_endpoint.py  test_model.py  test_smoke_live.py  test_snapshot.py  test_xml_parser.py
tests/fixtures/: README.md  commun-donnees.sample.js  lecture_valeurs_donnees.sample.xml
